<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DrawingCanvasFragment">

    <com.example.dreamdoodler.DrawingCanvasView
        android:id="@+id/customView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>